--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
                 </div>
             </div>
         </div>
-        <script src="http://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-        crossorigin="anonymous"></script>
+        <script src="http://code.jquery.com/jquery-3.3.1.js"></script>
         <script src="/Assets/javascript/game.js"></script>
     
     </body>
