adding media query and fixed paths

--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel='stylesheet' type='text/css' href='Assets/css/reset.css'>
-        <link rel='stylesheet' type='text/css' href='Assets/css/style.css'>
+        <link rel='stylesheet' type='text/css' href='assets/css/reset.css'>
+        <link rel='stylesheet' type='text/css' href='assets/css/style.css'>
         <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Kreon" rel="stylesheet">
         <title>Word Guess Game</title>
     </head>
     <body>
         <header>
-            <img class='logo' src="Assets/images/Snowboard_icon.png" alt="snowboard logo">
+            <img class='logo' src="assets/images/Snowboard_icon.png" alt="snowboard logo">
             <h1 class='hangmanHeader'>Word Guess</h1>
-            <img class='background' src='Assets/images/background.png'>
+            <img class='background' src='assets/images/background.png'>
         </header>
         <br><br><br><br><br><br>
         <div class='centerContent'>
             <div class='row'>
                 <div class='columns'>
-                    <h1><canvas id="stickman">This Text will show if the Browser does NOT support HTML5 Canvas tag</canvas></h1>
-                    <img>
+                    <h1>Hint:</h1>
+                    <img class='randomImage'>
                 </div>
                 <div class='columns'>
                     <h1 class='starterButton'>Press any key to begin playing</h1>
@@ -36,7 +36,7 @@
             </div>
         </div>
         <script src="http://code.jquery.com/jquery-3.3.1.js"></script>
-        <script src="/Assets/javascript/game.js"></script>
+        <script src="assets/javascript/game.js"></script>
     
     </body>
 
