fixed file path issues with images

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <header>
             <img class='logo' src="assets/images/Snowboard_icon.png" alt="snowboard logo">
             <h1 class='hangmanHeader'>Word Guess</h1>
-            <img class='background' src='assets/images/background.png'>
+            <img class='background' src='assets/images/background.jpg'>
         </header>
         <br><br><br><br><br><br>
         <div class='centerContent'>
